# py-2025

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/: main.py
